--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@
 #hibernate.show_sql=true
 #hibernate.hbm2ddl.auto=update
 
-spring.datasource.url=jdbc:mysql://localhost:3306/testbase?serverTimezone=Europe/Minsk&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/schema?serverTimezone=Europe/Minsk&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Asd-1234
 spring.jpa.generate-ddl=true
+
+spring.jpa.show-sql=true
